<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/zhi"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".LangCardActivity">    <com.google.android.material.textview.MaterialTextView        android:id="@+id/word"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="32dp"        android:layout_marginEnd="32dp"        android:layout_marginRight="32dp"        android:layout_marginTop="32dp"        android:layout_marginBottom="16dp"        android:layout_marginLeft="32dp"        android:textSize="18sp"        android:text="@string/word"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <com.google.android.material.button.MaterialButton        android:id="@+id/defenle"        style="@style/Widget.MaterialComponents.Button.OutlinedButton"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/_30"        android:textSize="18sp"        android:layout_margin="12dp"        app:strokeColor="@color/pinkStartColor"        android:textColor="@android:color/holo_red_light"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toStartOf="@id/tiaoyue"        app:layout_constraintHorizontal_bias="1.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="0.0"        app:strokeWidth="4dp" />    <com.google.android.material.textview.MaterialTextView        android:id="@+id/tiaoyue"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/skip"        android:textSize="20sp"        android:layout_margin="16dp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="1.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="0.0" />    <com.google.android.material.textview.MaterialTextView        android:id="@+id/meaning"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="32dp"        android:layout_marginEnd="32dp"        android:layout_marginRight="32dp"        android:layout_marginTop="16dp"        android:layout_marginBottom="32dp"        android:layout_marginLeft="32dp"        android:textSize="18sp"        android:text="@string/meaning"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/word" />    <com.google.android.material.button.MaterialButton        android:id="@+id/materialButton"        android:layout_width="48dp"        android:layout_height="48dp"        android:layout_marginStart="32dp"        android:layout_marginLeft="32dp"        android:layout_marginTop="16dp"        app:cornerRadius="8dp"        app:icon="@drawable/ic_volume_up_black_24dp"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/meaning" />    <com.google.android.material.textview.MaterialTextView        android:id="@+id/shengyin"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginStart="16dp"        android:layout_marginLeft="32dp"        android:layout_marginTop="16dp"        android:layout_marginEnd="32dp"        android:layout_marginRight="32dp"        android:text="@string/sound"        android:textSize="18sp"        app:layout_constraintBottom_toBottomOf="@+id/materialButton"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toEndOf="@+id/materialButton"        app:layout_constraintTop_toBottomOf="@+id/meaning" />    <com.google.android.material.card.MaterialCardView        android:id="@+id/hanz_ar"        android:layout_width="match_parent"        android:layout_height="0dp"        android:layout_marginStart="32dp"        android:layout_marginLeft="32dp"        android:layout_marginTop="32dp"        android:layout_marginEnd="32dp"        android:layout_marginRight="32dp"        android:layout_marginBottom="32dp"        android:elevation="4dp"        app:cardCornerRadius="12dp"        app:layout_constraintBottom_toTopOf="@+id/niokou"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/materialButton">        <androidx.constraintlayout.widget.ConstraintLayout            android:layout_width="match_parent"            android:layout_height="match_parent">            <WebView                android:id="@+id/svg"                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_marginStart="24dp"                android:layout_marginLeft="24dp"                android:layout_marginTop="12dp"                android:layout_marginEnd="24dp"                android:layout_marginRight="24dp"                android:layout_marginBottom="12dp"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="parent" />        </androidx.constraintlayout.widget.ConstraintLayout>    </com.google.android.material.card.MaterialCardView>    <com.google.android.material.button.MaterialButton        android:id="@+id/niokou"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@color/blueEndColor"        android:text="@string/done"        app:cornerRadius="8dp"        android:layout_marginStart="64dp"        android:layout_marginLeft="64dp"        android:layout_marginTop="32dp"        android:layout_marginEnd="64dp"        android:layout_marginRight="64dp"        android:layout_marginBottom="16dp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent" /></androidx.constraintlayout.widget.ConstraintLayout>