<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".reqing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/qiu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/jintian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="@string/today_s_score"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/huan"
                    android:gravity="center_horizontal|center_vertical|center"
                    android:minWidth="96dp"
                    android:padding="4dp"
                    android:text="@string/_30"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="@+id/jintian"
                    app:layout_constraintStart_toStartOf="@+id/jintian"
                    app:layout_constraintTop_toBottomOf="@+id/jintian" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/xin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/high_score"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/grace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/huan"
                    android:gravity="center_horizontal|center_vertical"
                    android:minWidth="96dp"
                    android:padding="4dp"
                    android:text="@string/_30"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="@+id/xin"
                    app:layout_constraintStart_toStartOf="@+id/xin"
                    app:layout_constraintTop_toBottomOf="@+id/xin" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="256dp"
                    android:layout_height="256dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/grace"
                    app:layout_constraintStart_toStartOf="@+id/grace"
                    app:layout_constraintTop_toBottomOf="@+id/grace"
                    app:lottie_autoPlay="true"
                    app:lottie_rawRes="@raw/cup_winner" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/buju"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical" />

    </LinearLayout>

</ScrollView>